[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libwebarena"
version = "0.0.4"
description = "This is an unofficial, use-at-your-own risks port of the webarena benchmark, for use as a standalone library package."
readme = "README.md"
requires-python = ">=3.7, <4"
dynamic = ["dependencies"]

[tool.hatch.build]
dependencies = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.envs.default]
installer = "uv"
packages = ["webarena", "webarena.browser_env", "webarena.agent", "webarena.evaluation_harness", "webarena.llms", "webarena.llms.providers"]
package-dir = {"webarena" = "config_files", "webarena.browser_env" = "browser_env", "webarena.agent" = "agent", "webarena.evaluation_harness" = "evaluation_harness", "webarena.llms" = "llms", "webarena.llms.providers" = "llms/providers"}
package-data = {"webarena" = ["test.raw.json"]}

[tool.hatch.build.targets.wheel]
packages = ["webarena", "webarena.browser_env", "webarena.agent", "webarena.evaluation_harness", "webarena.llms", "webarena.llms.providers"]

